# advent_of_code

./: .gitignore  Cargo.toml  README.md  bindings.json  day1.py  day1.ts  day2.ts  day3.ts  day4.ts  day5.ts  day_01.ts  day_01_test.ts  util.ts  util_test.ts
bindings/: bindings.ts
day_01/: index.ts
day_02/: main.ts
day_03/: index.ts  main.ts
day_04/: index.ts
day_05/: main.ts
src/: day5.rs  lib.rs
src/day01/: sonar_sweep.rs
src/day02/: dive.rs
src/day03/: binary_diagnostics.rs
src/day04/: bingo.rs
