[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sonar_sweep"
path = "src/day01/sonar_sweep.rs"

[[bin]]
name = "dive"
path = "src/day02/dive.rs"

[[bin]]
name = "binary_diagnostics"
path = "src/day03/binary_diagnostics.rs"

[[bin]]
name = "bingo"
path = "src/day04/bingo.rs"

[dependencies]
