[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "parser"
crate-type = ["cdylib"]

[dependencies]
deno_bindgen = "0.7.0"
nom = "7.1.1"
serde = { version = "1", features = ["derive"] }
